assets/css/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

.visually-hidden {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}

html {
    --color: #111;
    --background-color: #fff;
    --background-color--alt: #d3d3d3;

    margin: 0;
    color: var(--color);
    background-color: var(--background-color);
}

body {
    margin: 0;
    display: grid;
    grid-template-columns: minmax(1rem, 1fr) minmax(auto, 75rem) minmax(1rem, 1fr);

    &::before {
        content: "";
        display: block;
        background-color: var(--background-color--alt);
        grid-column: 1 / -1;
        grid-row: 1 / 2;
    }

    & > header {
        grid-row: 1 / 2; 
    }

    & > * {
        grid-column: 2 / 3;
    }
}

header {
    /* Shared header styles (regardless of state of custom element) */
    padding-block: 1rem;

    /* Default <header> layout styles (prior to progressive enhancement of custom element) */
    &:not(:has(> nav[is="responsive-site-navigation-element"][data-defined="true"])) {
        @media (min-width: 40em) {
            display: grid;
            grid-template-columns: 1rem auto 1fr 1rem;
        }
    }

    /* Modified <header> layout styles (if custom element is successfully loaded/progressively-enhanced) */
    &:has(> nav[is="responsive-site-navigation-element"][data-defined="true"]) {
        display: grid;
        grid-template-columns: 1rem auto 1fr 1rem;

        > .website-name > a {
            margin-inline-start: -1.5rem;
            font-size: clamp(0.875rem, -5.875rem + 36vw, 2rem);

            @media (min-width: 40em) {
                margin-inline-start: -2rem;
            }
        }
    }
}

header > .skip-link {
    position: absolute;
    
    &:not(:focus-within) {
        inset-inline-start: -62.5rem;
    }
    
    &:focus-within {
        margin: 0.25rem;
        inset-block-start: 0;
        inset-inline-start: 0;
    }

    > a {
        display: block;
        padding: 1rem;
        border: 0.125rem solid var(--color);
        background-color: var(--background-color);
        color: var(--color);
    }
}

header > .website-name {
    grid-column: 2 / 3;
    margin: 0;

    > a {
        display: block;
        padding: 0.5rem;
        color: var(--color);
        font-family: sans-serif;
        font-size: 2rem;
        font-weight: 900;
        text-decoration: none;

        @media (min-width: 40em) {
            padding-inline: 1rem;
            margin-inline-start: -2rem;
        }
    }
}

header > nav[is="responsive-site-navigation-element"] {
    /* Shared styles for the custom element (relevant to both its unenhanced and progressively-enhanced states) */
    grid-column: 3 / 4;
    align-content: center;

    > ul,
    > ol {
        margin: 0;
        padding: 0;
        list-style-type: none;

        > li > a {
            display: block;
            padding: 1rem;
            border-radius: 1rem;
            color: var(--color);

            &[aria-current="page"] {
                color: var(--background-color);
                background-color: var(--color);
            }
        }
    }

    /* Default styles for the custom element (prior to it being progressively enhanced) */
    &:not([data-defined="true"]) {
        > ul,
        > ol {
            display: flex;
            flex-wrap: wrap;
            margin-inline-start: -0.5rem;

            @media (min-width: 40em) {
                justify-content: end;
            }
        }
    }

    /* Modified styles for the custom element (if it is succesfully loaded/progressively-enhanced) */
    &[data-defined="true"] {
        container-type: inline-size;

        > [is="dialog-modal-element"] {
            height: 100%;
            padding-inline: 1rem;
            margin-inline-end: -1.75rem;
            align-content: center;
            justify-self: end;
            position: relative;

            > button {
                display: block;
                padding: 0.25rem;

                &::after {
                    content: "";
                    display: block;
                    padding: 1rem;
                    position: absolute;
                    inset: 0;
                }

                &:focus-visible {
                    outline: none;

                    &::after {
                        outline: 0.125rem solid var(--color);
                    }
                }
            }

            > dialog[open] {
                height: 100vh;
                max-height: 100vh;
                overflow-y: auto;
                width: 100%;
                max-width: unset;
                margin: 0;
                padding: 0;
                border: none;
                display: grid;
                grid-template-columns: 1rem minmax(auto, 1fr) auto 1rem;
                grid-template-rows: auto minmax(auto, 1fr);
                background-color: var(--color);
                color: var(--background-color);

                > h2 {
                    margin: 0;
                    padding-block: 1.5rem;
                    font-size: clamp(0.875rem, -5.875rem + 36vw, 2rem);
                    grid-column: 2 / 3;
                }

                > button.dialog__close-control {
                    display: block;
                    grid-column: 3 / 4;
                    align-self: center;
                    position: relative;

                    &::after {
                        content: "";
                        display: block;
                        position: absolute;
                        inset: 0;
                        margin: -1.25rem -1rem;
                    }

                    &:focus-visible {
                        outline: none;

                        &::after {
                            outline: 0.125rem solid var(--background-color);
                        }
                    }
                }

                > * {
                    grid-column: 2 / 4;
                }

                > ul {
                    margin: 0;
                    padding: 0;
                    list-style-type: none;
                    display: flex;
                    flex-direction: column;
                    gap: 0.25rem;

                    > li > a {
                        display: block;
                        padding: 1rem;
                        color: var(--color);
                        background-color: var(--background-color--alt);

                        &[aria-current="page"] {
                            display: flex;
                            align-items: center;

                            &::before {
                                content: "";
                                display: block;
                                width: 0.25rem;
                                height: 0.25rem;
                                margin-inline-end: 0.5rem;
                                border-radius: 50%;
                                background-color: var(--color);
                            }
                        }
                    }
                }
            }
        }

        @container (min-width: 20em) {
            > ul[hidden],
            > ol[hidden] {
                display: flex;
                justify-content: end;
            }

            > [is="dialog-modal-element"] {
                display: none;
            }
        }
    }
}

